--- a/playground/templates/hello.html
+++ b/playground/templates/hello.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
 <html>
+
 <body>
 
-<h1>My First {{ name }}</h1>
+    <h1>My First {{ name }}</h1>
 
-<p>My first paragraph.</p>
-
+    <p>My first paragraph</p>
+    {{ result }}
 </body>
+
 </html>
